--- a/publication.html
+++ b/publication.html
@@ -24,16 +24,16 @@
 </p>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/2401.15889.pdf" target=&ldquo;blank&rdquo;><font color="blue">Sliced Wasserstein with Random-Path Projecting Directions</font></a>  <br /> 
+<li><p><a href="https://arxiv.org/pdf/2402.04516.pdf" target=&ldquo;blank&rdquo;><font color="blue">Generalized Sobolev Transport for Probability Measures on a Graph</font></a>  <br /> 
 International Conference on Machine Learning (<b>ICML</b>), 2024. (<i>Acceptance rate: 2609/9473</i>) <br />
-Khai Nguyen, Shujian Zhang, <b>Tam Le</b>, Nhat Ho.
+<b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Kenji Fukumizu.
 </p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/2402.04516.pdf" target=&ldquo;blank&rdquo;><font color="blue">Generalized Sobolev Transport for Probability Measures on a Graph</font></a>  <br /> 
+<li><p><a href="https://arxiv.org/pdf/2401.15889.pdf" target=&ldquo;blank&rdquo;><font color="blue">Sliced Wasserstein with Random-Path Projecting Directions</font></a>  <br /> 
 International Conference on Machine Learning (<b>ICML</b>), 2024. (<i>Acceptance rate: 2609/9473</i>) <br />
-<b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Kenji Fukumizu.
+Khai Nguyen, Shujian Zhang, <b>Tam Le</b>, Nhat Ho.
 </p>
 </li>
 </ul>
@@ -129,16 +129,16 @@ Machine Learning Journal (<b>MLJ</b>), 2014. <br />
 <p><b>Other Journals / Conference papers / Preprints</b>
 </p>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/2406.01130v1" target=&ldquo;blank&rdquo;><font color="blue">SAVA: Scalable Learning-Agnostic Data Valuation</font></a>  <br /> 
+<li><p><a href="https://arxiv.org/pdf/2406.13725" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance on a System of Lines</font></a>  <br /> 
 ArXiv, 2024. <br /> 
-Samuel Kessler<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Vu Nguyen.
+Viet-Hoang Tran<font color="red">*</font>, Trang Pham<font color="red">*</font>, Tho Tran,  <b>Tam Le</b><font color="purple">**</font>, Tan M. Nguyen<font color="purple">**</font>.
 </p>
 </li>
 </ul>
 <ul>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance on a System of Lines</font></a>  <br /> 
-Under review, 2024. <br /> 
-Hoang Tran<font color="red">*</font>, Trang Pham<font color="red">*</font>, Tho Tran,  <b>Tam Le</b><font color="purple">**</font>, Tan Nguyen<font color="purple">**</font>.
+<li><p><a href="https://arxiv.org/pdf/2406.01130v1" target=&ldquo;blank&rdquo;><font color="blue">SAVA: Scalable Learning-Agnostic Data Valuation</font></a>  <br /> 
+ArXiv, 2024. <br /> 
+Samuel Kessler<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Vu Nguyen.
 </p>
 </li>
 </ul>
@@ -239,6 +239,9 @@ PhD thesis, Kyoto University, Japan, 2015.
 <p><b>Workshop Posters</b>
 </p>
 <ul>
+<li><p>2024, <a href="https://www.dropbox.com/scl/fi/rs654fd09m5aj1umry8k4/TamLe_2024_Posters_ISM-Open-House.pdf?rlkey=msv8nosjc8nfg38zasuapu46c&amp;dl=0" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport for Measures with Noisy Tree Metric</font></a>, ISM Open House, Japan.
+</p>
+</li>
 <li><p>2024, <font color="blue">Scalable Robust Optimal Transport for Measures with Noisy Tree Metric</font>, <a href="https://sites.google.com/view/dl2024/" target=&ldquo;blank&rdquo;>Deep Learning: Theory, Applications, and Implications workshop</a>, Japan.
 </p>
 </li>
@@ -276,6 +279,9 @@ PhD thesis, Kyoto University, Japan, 2015.
 <p><b>Invited Talks</b>
 </p>
 <ul>
+<li><p>2024, <font color="blue">Recent Results on Optimal Transport and Its Applications</font>, Statistical Mathematics Seminar Series, Virtual. [<a href="https://www.dropbox.com/scl/fi/eje8t6afomil7uo4olvap/TamLe_2024_SMSS_40min.pdf?rlkey=f1rm43a447whqx239p18uff50&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
+</p>
+</li>
 <li><p>2024, <font color="blue">Scalable Robust Optimal Transport for Measures with Noisy Tree Metric </font>, Data Science Seminar (<a href="https://data-descriptive-science.org/en/" target=&ldquo;blank&rdquo;>Data Descriptive Science</a>), Kyoto, Japan (hybrid).
 </p>
 </li>
@@ -333,7 +339,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-29 10:59:22 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-09-03 13:32:01 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
