--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Visiting Scientist, <a href="https://www.riken.jp/en/research/labs/aip/generic_t
 Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a>. <br />
 </p>
 </td></tr></table>
-<p>Research interests: Machine learning, optimal transport, kernel methods, geometric machine learning. <br />
+<p>Research interests: Machine learning, optimal transport, geometric methods, kernel methods. <br />
 </p>
 <h2>Contact</h2>
 <div class="infoblock">
@@ -50,7 +50,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <li><p>07-Aug-2023, I will serve as Area Chair for <a href="https://iclr.cc/" target=&ldquo;blank&rdquo;><b>ICLR&rsquo;25</b></a>.
 </p>
 </li>
-<li><p>03-Aug-2023, I will serve as Senior Program Committee for <a href="https://aaai.org/conference/aaai/aaai-25/" target=&ldquo;blank&rdquo;>AAAI&rsquo;25</a>.
+<li><p>03-Aug-2023, I will serve as Senior Program Committee for <a href="https://aaai.org/conference/aaai/aaai-25/" target=&ldquo;blank&rdquo;><i>AAAI&rsquo;25</i></a>.
 </p>
 </li>
 <li><p>02-May-2024, Our 2 papers have been accepted to <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;24</b></a>.
@@ -119,13 +119,13 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </li>
 </ul>
 <h2>Vita</h2>
-<p>I received my Ph.D in 01/2016 from <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University, Japan</a>, supervised by <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;><b>Marco</b> <b>Cuturi</b></a> and <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;><b>Akihiro</b> <b>Yamamoto</b></a>. Then, I worked as a post-doctoral researcher at <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Nagoya Institute of Technology</a> &amp; <a href="https://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>National Institute for Materials Science, Japan</a>, mentored by <a href="https://www.mlds.mae.nagoya-u.ac.jp/takeuchi/index.en.html" target=&ldquo;blank&rdquo;>Ichiro Takeuchi</a> between 02/2016 and 08/2017. After that, I worked as a post-doctoral researcher between 09/2017 and 07/2021, and as a research scientist between 08/2021 and 08/2022 at <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>, mentored by <a href="https://groups.oist.jp/mlds/makoto-yamada" target=&ldquo;blank&rdquo;>Makoto Yamada</a>. From 09/2022, I have been working as an assistant professor at <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a>, and I have concurrently been a visiting scientist at <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN AIP</a>, working in <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Team</a> led by <a href="https://minh-ha-quang.github.io/" target=&ldquo;blank&rdquo;>Minh Ha Quang</a> from 12/2022. 
+<p>I received my Ph.D in 01/2016 from <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University, Japan</a>, supervised by <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;><b>Marco</b> <b>Cuturi</b></a> and <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;><b>Akihiro</b> <b>Yamamoto</b></a>. Then, I worked as a post-doctoral researcher at <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Nagoya Institute of Technology</a> &amp; <a href="https://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>National Institute for Materials Science, Japan</a>, mentored by <a href="https://www.mlds.mae.nagoya-u.ac.jp/takeuchi/index.en.html" target=&ldquo;blank&rdquo;>Ichiro Takeuchi</a> between 02/2016 and 08/2017. Then, I worked as a post-doctoral researcher between 09/2017 and 07/2021, and as a research scientist between 08/2021 and 08/2022 at <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>, mentored by <a href="https://groups.oist.jp/mlds/makoto-yamada" target=&ldquo;blank&rdquo;>Makoto Yamada</a>. From 09/2022, I have been working as an assistant professor at <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a>, and I have concurrently been a visiting scientist at <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN AIP</a>, working in <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Team</a> led by <a href="https://minh-ha-quang.github.io/" target=&ldquo;blank&rdquo;>Minh Ha Quang</a> from 12/2022. 
 </p>
 <p><br /><br />
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-29 10:59:22 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-09-03 13:32:01 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
