--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <td id="layout-content">
 <div id="toptitle">
 <h1>Tam Le (PhD, 2016)</h1>
-<div id="subtitle"></div>
+<div id="subtitle">
+</div>
 </div>
 <table class="imgtable"><tr><td>
 <a href="TamLeISM22.jpg"><img src="TamLeISM22.jpg" alt="Tam Le" width="150px" height="178px" /></a>&nbsp;</td>
@@ -29,76 +30,102 @@
 <br />
 Concurrent affiliation: <br />
 Visiting Scientist, <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Team</a>, <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>. <br />
-Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a>. <br /></p>
+Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a>. <br />
+</p>
 </td></tr></table>
-<p>Research interests: Machine learning, optimal transport, geometric methods, kernel methods. <br /></p>
+<p>Research interests: Machine learning, optimal transport, geometric methods, kernel methods. <br />
+</p>
 <h2>Contact</h2>
 <div class="infoblock">
 <div class="blockcontent">
 <p>10-3 Midori-cho, Tachikawa, Tokyo 190-8562, Japan <br />
 Email: tam[<i>at</i>]ism.ac.jp (or lttam.vn[<i>at</i>]gmail.com) <br />
-Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;blank&rdquo;>Access to ISM</a> <br /></p>
+Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;blank&rdquo;>Access to ISM</a> <br />
+</p>
 </div></div>
-<p>My CV is <a href="https://www.dropbox.com/scl/fi/ta3dwucrqqvo6pr0wr2zf/TamLe2024Apr.pdf?rlkey=ggj2p9bwia4p1wo6m23fyorr9&amp;dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated April, 2024.</p>
+<p>My CV is <a href="https://www.dropbox.com/scl/fi/ta3dwucrqqvo6pr0wr2zf/TamLe2024Apr.pdf?rlkey=ggj2p9bwia4p1wo6m23fyorr9&amp;dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated April, 2024.
+</p>
 <h2>News</h2>
 <ul>
-<li><p>11-Sep-2024, I will serve as Area Chair for <a href="https://aistats.org/aistats2025/" target=&ldquo;blank&rdquo;><b>AISTATS&rsquo;25</b></a>.</p>
+<li><p>11-Sep-2024, I will serve as Area Chair for <a href="https://aistats.org/aistats2025/" target=&ldquo;blank&rdquo;><b>AISTATS&rsquo;25</b></a>.
+</p>
 </li>
-<li><p>07-Aug-2024, I will serve as Area Chair for <a href="https://iclr.cc/" target=&ldquo;blank&rdquo;><b>ICLR&rsquo;25</b></a>.</p>
+<li><p>07-Aug-2024, I will serve as Area Chair for <a href="https://iclr.cc/" target=&ldquo;blank&rdquo;><b>ICLR&rsquo;25</b></a>.
+</p>
 </li>
-<li><p>03-Aug-2024, I will serve as Senior Program Committee for <a href="https://aaai.org/conference/aaai/aaai-25/" target=&ldquo;blank&rdquo;><i>AAAI&rsquo;25</i></a>.</p>
+<li><p>03-Aug-2024, I will serve as Senior Program Committee for <a href="https://aaai.org/conference/aaai/aaai-25/" target=&ldquo;blank&rdquo;><i>AAAI&rsquo;25</i></a>.
+</p>
 </li>
-<li><p>02-May-2024, Our 2 papers have been accepted to <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;24</b></a>.</p>
+<li><p>02-May-2024, Our 2 papers have been accepted to <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;24</b></a>.
+</p>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/2401.15889" target=&ldquo;blank&rdquo;>Sliced Wasserstein with Random-Path Projecting Directions</a>, joint work with Khai Nguyen, Shujian Zhang, and Nhat Ho.</p>
+<li><p><a href="https://arxiv.org/pdf/2401.15889" target=&ldquo;blank&rdquo;>Sliced Wasserstein with Random-Path Projecting Directions</a>, joint work with Khai Nguyen, Shujian Zhang, and Nhat Ho.
+</p>
 </li>
-<li><p><a href="https://arxiv.org/pdf/2402.04516" target=&ldquo;blank&rdquo;>Generalized Sobolev Transport for Probability Measures on a Graph</a>, joint work with Truyen Nguyen, and Kenji Fukumizu.</p>
+<li><p><a href="https://arxiv.org/pdf/2402.04516" target=&ldquo;blank&rdquo;>Generalized Sobolev Transport for Probability Measures on a Graph</a>, joint work with Truyen Nguyen, and Kenji Fukumizu.
+</p>
 </li></ul>
 </li>
-<li><p>23-Jan-2024, I will serve as Area Chair for <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;24</b></a>.</p>
+<li><p>23-Jan-2024, I will serve as Area Chair for <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;24</b></a>.
+</p>
 </li>
-<li><p>20-Jan-2024, Our paper, entitled <a href="https://arxiv.org/pdf/2310.13653.pdf" target=&ldquo;blank&rdquo;>&ldquo;Optimal Transport for Measures with Noisy Tree Metric&rdquo;</a> has been accepted to <a href="http://aistats.org/aistats2024/" target=&ldquo;blank&rdquo;><b>AISTATS&rsquo;24</b></a>! This is joint work with Truyen Nguyen and Kenji Fukumizu.  </p>
+<li><p>20-Jan-2024, Our paper, entitled <a href="https://arxiv.org/pdf/2310.13653.pdf" target=&ldquo;blank&rdquo;>&ldquo;Optimal Transport for Measures with Noisy Tree Metric&rdquo;</a> has been accepted to <a href="http://aistats.org/aistats2024/" target=&ldquo;blank&rdquo;><b>AISTATS&rsquo;24</b></a>! This is joint work with Truyen Nguyen and Kenji Fukumizu.  
+</p>
 </li>
-<li><p>16-Jan-2024, I give an invited talk at <a href="https://ims.nus.edu.sg/events/the-mathematics-of-data/" target=&ldquo;blank&rdquo;>The Mathematics of Data program &ndash; Workshop on Optimal Transport and PDEs</a>, IMS, NUS, Singapore. [<a href="https://www.dropbox.com/scl/fi/r5weqj7u1ue01nykzrljx/TamLe_IMS2024_The-Mathematics-of-Data.pdf?rlkey=utlujdbteoojzivxbnfwxcono&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
+<li><p>16-Jan-2024, I give an invited talk at <a href="https://ims.nus.edu.sg/events/the-mathematics-of-data/" target=&ldquo;blank&rdquo;>The Mathematics of Data program &ndash; Workshop on Optimal Transport and PDEs</a>, IMS, NUS, Singapore. [<a href="https://www.dropbox.com/scl/fi/r5weqj7u1ue01nykzrljx/TamLe_IMS2024_The-Mathematics-of-Data.pdf?rlkey=utlujdbteoojzivxbnfwxcono&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
+</p>
 </li>
-<li><p>13-Jan-2024, Our paper on optimal transport for causal inference, entitled <a href="https://arxiv.org/pdf/2311.00927.pdf" target=&ldquo;blank&rdquo;>&ldquo;Scalable Counterfactual Distribution Estimation in Multivariate Causal Models&rdquo;</a> has been accepted to <a href="https://www.cclear.cc/2024/" target=&ldquo;blank&rdquo;><i>CLeaR&rsquo;24</i></a>! This is joint work with Thong Pham, Shohei Shimizu and Hideitsu Hino.  </p>
+<li><p>13-Jan-2024, Our paper on optimal transport for causal inference, entitled <a href="https://arxiv.org/pdf/2311.00927.pdf" target=&ldquo;blank&rdquo;>&ldquo;Scalable Counterfactual Distribution Estimation in Multivariate Causal Models&rdquo;</a> has been accepted to <a href="https://www.cclear.cc/2024/" target=&ldquo;blank&rdquo;><i>CLeaR&rsquo;24</i></a>! This is joint work with Thong Pham, Shohei Shimizu and Hideitsu Hino.  
+</p>
 </li>
-<li><p>24-Aug-2023, I will serve as Area Chair for <a href="http://aistats.org/aistats2024/" target=&ldquo;blank&rdquo;><b>AISTATS&rsquo;24</b></a> and <a href="https://iclr.cc/" target=&ldquo;blank&rdquo;><b>ICLR&rsquo;24</b></a>.</p>
+<li><p>01-Apr-2023, Our proposal has been accepted by the Grants-in-Aid for Scientific Research (C) as PI (04/2023 - 03/2026).
+</p>
 </li>
-<li><p>01-Apr-2023, Our proposal has been accepted by the Grants-in-Aid for Scientific Research (C) as PI (04/2023 - 03/2026).</p>
+<li><p>01-Dec-2022, I am officially appointed as a visiting scientist at <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Unit</a>, <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>.
+</p>
 </li>
-<li><p>01-Dec-2022, I am officially appointed as a visiting scientist at <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Unit</a>, <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>.</p>
-</li>
-<li><p>01-Sep-2022, I officially join in <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a> as Assistant Professor. I am also an Assistant Professor at <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a>.</p>
+<li><p>01-Sep-2022, I officially join in <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a> as Assistant Professor. I am also an Assistant Professor at <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a>.
+</p>
 </li>
 </ul>
 <h2>Research Support</h2>
-<p><b>Grants</b></p>
+<p><b>Grants</b>
+</p>
 <ul>
-<li><p>04/2023 - 03/2026, <a href="https://www.jsps.go.jp/english/e-grants/" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 23K11243</a>, Grants-in-Aid for Scientific Research (C) as PI (4.8M JPY). </p>
+<li><p>04/2023 - 03/2026, <a href="https://www.jsps.go.jp/english/e-grants/" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 23K11243</a>, Grants-in-Aid for Scientific Research (C) as PI (4.8M JPY). 
+</p>
 </li>
-<li><p>04/2020 - 03/2023, <a href="https://www.jsps.go.jp/english/e-grants/grants01.html" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 20K19873</a>, Grants-in-Aid for Young Scientists as PI (4.2M JPY). </p>
+<li><p>04/2020 - 03/2023, <a href="https://www.jsps.go.jp/english/e-grants/grants01.html" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 20K19873</a>, Grants-in-Aid for Young Scientists as PI (4.2M JPY). 
+</p>
 </li>
-<li><p>04/2017 - 03/2020, <a href="https://www.jsps.go.jp/english/e-grants/grants01.html" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 17K12745</a>, Grants-in-Aid for Young Scientists (B) as PI (4.1M JPY). </p>
+<li><p>04/2017 - 03/2020, <a href="https://www.jsps.go.jp/english/e-grants/grants01.html" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 17K12745</a>, Grants-in-Aid for Young Scientists (B) as PI (4.1M JPY). 
+</p>
 </li>
 </ul>
-<p><b>Others</b></p>
+<p><b>Others</b>
+</p>
 <ul>
-<li><p>06/2022 - 03/2027, a collaborator in Data Science group led by <a href="https://www.ism.ac.jp/~fukumizu/" target=&ldquo;blank&rdquo;>Kenji Fukumizu</a> (ISM), JSPS - Grant-in-Aid for Transformative Research Areas (A). </p>
+<li><p>06/2022 - 03/2027, a collaborator in Data Science group led by <a href="https://www.ism.ac.jp/~fukumizu/" target=&ldquo;blank&rdquo;>Kenji Fukumizu</a> (ISM), JSPS - Grant-in-Aid for Transformative Research Areas (A). 
+</p>
 </li>
-<li><p>04/2023 - 03/2025, a collaborator in a group led by <a href="https://sites.google.com/view/hinohide/" target=&ldquo;blank&rdquo;>Hideitsu Hino</a> (ISM), Mitsui Knowledge Industry Co., Ltd. grant. </p>
+<li><p>04/2023 - 03/2025, a collaborator in a group led by <a href="https://sites.google.com/view/hinohide/" target=&ldquo;blank&rdquo;>Hideitsu Hino</a> (ISM), Mitsui Knowledge Industry Co., Ltd. grant. 
+</p>
 </li>
-<li><p>04/2024 - 03/2025, ISM Joint-research 2024-ISMCRP-2021 as PI.</p>
+<li><p>04/2024 - 03/2025, ISM Joint-research 2024-ISMCRP-2021 as PI.
+</p>
 </li>
-<li><p>04/2023 - 03/2024, ISM Joint-research 2023-ISMCRP-2010 as PI.</p>
+<li><p>04/2023 - 03/2024, ISM Joint-research 2023-ISMCRP-2010 as PI.
+</p>
 </li>
 </ul>
 <h2>Vita</h2>
-<p>I received my Ph.D in 01/2016 from <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University, Japan</a>, supervised by <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;><b>Marco</b> <b>Cuturi</b></a> and <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;><b>Akihiro</b> <b>Yamamoto</b></a>. I worked as a post-doctoral researcher at <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Nagoya Institute of Technology</a> &amp; <a href="https://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>National Institute for Materials Science, Japan</a>, mentored by <a href="https://www.mlds.mae.nagoya-u.ac.jp/takeuchi/index.en.html" target=&ldquo;blank&rdquo;>Ichiro Takeuchi</a> between 02/2016 and 08/2017. I then worked as a post-doctoral researcher between 09/2017 and 07/2021, and later as a research scientist between 08/2021 and 08/2022 at <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>, mentored by <a href="https://groups.oist.jp/mlds/makoto-yamada" target=&ldquo;blank&rdquo;>Makoto Yamada</a>. From 09/2022, I have been working as an assistant professor at <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a>, and I have concurrently been a visiting scientist at <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN AIP</a>, working in <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Team</a> led by <a href="https://minh-ha-quang.github.io/" target=&ldquo;blank&rdquo;>Minh Ha Quang</a> from 12/2022. </p>
-<p><br /><br /></p>
+<p>I received my Ph.D in 01/2016 from <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University, Japan</a>, supervised by <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;><b>Marco</b> <b>Cuturi</b></a> and <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;><b>Akihiro</b> <b>Yamamoto</b></a>. I worked as a post-doctoral researcher at <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Nagoya Institute of Technology</a> &amp; <a href="https://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>National Institute for Materials Science, Japan</a>, mentored by <a href="https://www.mlds.mae.nagoya-u.ac.jp/takeuchi/index.en.html" target=&ldquo;blank&rdquo;>Ichiro Takeuchi</a> between 02/2016 and 08/2017. I then worked as a post-doctoral researcher between 09/2017 and 07/2021, and later as a research scientist between 08/2021 and 08/2022 at <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>, mentored by <a href="https://groups.oist.jp/mlds/makoto-yamada" target=&ldquo;blank&rdquo;>Makoto Yamada</a>. From 09/2022, I have been working as an assistant professor at <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a>, and I have concurrently been a visiting scientist at <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN AIP</a>, working in <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Team</a> led by <a href="https://minh-ha-quang.github.io/" target=&ldquo;blank&rdquo;>Minh Ha Quang</a> from 12/2022. 
+</p>
+<p><br /><br />
+</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-09-11 13:29:41 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-10-30 11:52:57 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
